# axum-enum-response

./: Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
src/: lib.rs
tests/: body.rs  compiles.rs  from.rs  message.rs  no_fields.rs
