[package]
name = "axum-enum-response"
version = "0.1.2"
edition = "2021"
description = "Use enums as Axum Response's easily"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/axum-enum-response"
repository = "https://github.com/lilyrrose/axum-enum-response"
categories = ["web-programming"]
keywords = ["axum"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = "2.0.51"

[dev-dependencies]
axum = "0.7.4"
tokio = { version = "1", features = ["full"]}
futures = "0.3"
serde = { version = "1.0.197", features = ["derive"] }
